# python-poetry-test

./: .whitesource  package.json  pyproject.toml
